--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,14 @@ services:
       - 8101:3306
     command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
     container_name: marketplace_db
+
+  phpmyadmin:
+      image: phpmyadmin:latest
+      environment:
+          MYSQL_ROOT_PASSWORD: root
+      ports:
+          - 8080:80
+      container_name: marketplace_phpmyadmin
   node:
       image: node:latest
       depends_on:
